# mcp-hub

./: .flake8  .gitignore  BOOTSTRAP_COMPLETE.md  CORRECTED_IMPLEMENTATION.md  DEVELOPMENT.md  Dockerfile.proxy  ENCRYPTED_SECRETS_COMPLETE.md  ENCRYPTED_SECRETS_SOLUTION.md  INSTALLER_ANSWERS.md  LLM_VERIFICATION_COMPLETE.md  Makefile  README.md  REALISTIC_DEPLOYMENT.md  RELEASE-NOTES-v1.0.2.md  WORKSPACE_SOLUTION.md  build.sh  compose.template.yml  deploy.sh  install.sh  main.py  pyproject.toml  requirements.txt  test_proxy.py  test_proxy_complete.py
.github/workflows/: auto-format.yml  build.yml  code-quality.yml  debug.yml  docker.yml  release.yml  test-installations.yml  test-simple.yml
docs/: ARCH.md  DEPLOYMENT.md  QA_TESTING.md  TODO.md  install.sh
electron/: builder.json  electron-proxy-handlers.js  electron.js  index.html  package-lock.json  package.json  preload.js  proxy-integration.js  vite.config.ts
electron/src/: App.tsx  autostart.ts  (+1 more)
mcpctl/: __init__.py  cli.py  cli_proxy_import.py  compose_gen.py  container_engine.py  digest_manager.py  discover.py  encryption.py  llm_tester.py  mcp_proxy.py  onboarding.py  proxy_commands.py  registry.py  workspace.py
scripts/: debug-github-actions.sh  detect-platform.sh  e2e-test.sh  install.sh  lint.sh  publish-docker.sh  test-bootstrap.sh  test-e2e.sh  test-encryption.sh  test-installer.sh  test-llm.sh  test-platforms.sh  test-release-assets.sh  test-release-assets.sh.bak  test-workspace.sh  validate-release.sh
services/: firecrawl.yml  mcp-proxy.yml
web/: Dockerfile  README.md  requirements.txt  server.py
(+13 files in other folders)
